; ModuleID = '/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seatop_axis.c'
source_filename = "/home/carl/AnghaBench/sway/sway/input/extr_seat.c_seatop_axis.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sway_seat = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.sway_seat*, %struct.wlr_event_pointer_axis*)* }
%struct.wlr_event_pointer_axis = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @seatop_axis(%struct.sway_seat* %0, %struct.wlr_event_pointer_axis* %1) #0 {
  %3 = alloca %struct.sway_seat*, align 8
  %4 = alloca %struct.wlr_event_pointer_axis*, align 8
  store %struct.sway_seat* %0, %struct.sway_seat** %3, align 8
  store %struct.wlr_event_pointer_axis* %1, %struct.wlr_event_pointer_axis** %4, align 8
  %5 = load %struct.sway_seat*, %struct.sway_seat** %3, align 8
  %6 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %5, i32 0, i32 0
  %7 = load %struct.TYPE_2__*, %struct.TYPE_2__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %7, i32 0, i32 0
  %9 = load i32 (%struct.sway_seat*, %struct.wlr_event_pointer_axis*)*, i32 (%struct.sway_seat*, %struct.wlr_event_pointer_axis*)** %8, align 8
  %10 = icmp ne i32 (%struct.sway_seat*, %struct.wlr_event_pointer_axis*)* %9, null
  br i1 %10, label %11, label %20

11:                                               ; preds = %2
  %12 = load %struct.sway_seat*, %struct.sway_seat** %3, align 8
  %13 = getelementptr inbounds %struct.sway_seat, %struct.sway_seat* %12, i32 0, i32 0
  %14 = load %struct.TYPE_2__*, %struct.TYPE_2__** %13, align 8
  %15 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %14, i32 0, i32 0
  %16 = load i32 (%struct.sway_seat*, %struct.wlr_event_pointer_axis*)*, i32 (%struct.sway_seat*, %struct.wlr_event_pointer_axis*)** %15, align 8
  %17 = load %struct.sway_seat*, %struct.sway_seat** %3, align 8
  %18 = load %struct.wlr_event_pointer_axis*, %struct.wlr_event_pointer_axis** %4, align 8
  %19 = call i32 %16(%struct.sway_seat* %17, %struct.wlr_event_pointer_axis* %18)
  br label %20

20:                                               ; preds = %11, %2
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
